dropshot/tests/fail/bad_endpoint7.stderr
error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
    --> $DIR/bad_endpoint7.rs:25:6
     |
25   | ) -> Result<HttpResponseOk<Ret>, HttpError> {
     |      ^^^^^^ the trait `serde::ser::Serialize` is not implemented for `Ret`
     |
    ::: $WORKSPACE/dropshot/src/handler.rs
     |
     | pub struct HttpResponseOk<T: JsonSchema + Serialize + Send + Sync + 'static>(
     |                                           --------- required by this bound in `HttpResponseOk`
